force-app/main/default/objects/Lead/fields/External_Sync_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Id__c</fullName>
    <description>External identifier from webhook.site or randomuser.me.</description>
    <label>External Sync Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>