force-app/main/default/objects/Lead/fields/External_Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Message__c</fullName>
    <description>HTTP status or error from the last external sync.</description>
    <label>External Sync Message</label>
    <type>Text</type>
    <length>255</length>
</CustomField>