force-app/main/default/objects/Lead/fields/External_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Sync_Status__c</fullName>
    <description>Status of the Platform Event sync to webhook.site or inbound from randomuser.me.</description>
    <label>External Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>